skeplib/tests/fixtures/resolver/invalid/namespace_direct_import_conflict/a.sk
fn local() -> Int { return 1; }
export { local };
